deployments/app1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    kind.service: app1
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      kind.service: app1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        kind.service: app1
    spec:
      containers:
      - image: ghcr.io/kubecorn/test_vault/app1:latest-k8s
        imagePullPolicy: "Always"
        name: app1
        resources: {}
        volumeMounts:
        - mountPath: /data/history/
          name: cache-volume
      imagePullSecrets:
      - name: kubecorn-registry
      restartPolicy: Always
      volumes:
      - name: cache-volume
        emptyDir: {}
status: {}
