deployments/app1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  labels:
    kind.service: app1
spec:
  ports:
  - name: 9081-9081
    nodePort: 30981
    port: 9081
    protocol: TCP
    targetPort: 9081
  type: NodePort
  selector:
    kind.service: app1
