deployments/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
#      initContainers:
#        - name: get_init_db
#          image: busybox
#          command:
#          - wget
#          - "-O"
#          - "/var/lib/mysql/init.sql"
#          - https://github.com/kubeCorn/test_vault/blob/master/init.sql
        #- name: config_sql
        #  scriptSource:
        #    configMap:
        #     name: my-init-script
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: mysql-config-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        #configMap:
        #  name: mysql-initdb-config
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      - name: mysql-config
        configMap:
          name: mysql-initdb-config
